@@ -5,6 +5,10 @@ Changelog
 1.3.8 (unreleased)
 ------------------
 
+- Disable setting default page for Meeting and MeetingItem.
+  Those types are not normal folders and setting the default page is therefore not common.
+  [jone]
+
 - Remove base_view from allowed Meeting views.
   [jone]
 
